--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "daisyui": "^2.51.0",
+    "esbuild": "^0.17.10"
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
   }
 }
